--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "git://github.com/logicalparadox/gryn.git"
   },
   "main": "./index",
+  "bin": {
+    "gryn": "./bin/gryn"
+  },
   "scripts": {
     "test": "make test"
   },
