--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "author": "Jake Luer <jake@alogicalparadox.com>",
-  "name": "gryn",
-  "description": "Use a procfile.",
-  "version": "0.1.1",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/logicalparadox/gryn.git"
-  },
-  "main": "./index",
-  "bin": {
-    "gryn": "./bin/gryn"
-  },
-  "scripts": {
-    "test": "make test"
-  },
-  "dependencies": {
-    "optimist": "0.3.x",
-    "drip": "0.2.x"
-  },
-  "devDependencies": {
-    "mocha": "*",
-    "chai": "*",
-    "chai-http": "*",
-    "superagent": "0.4.x"
-  },
-  "optionalDependencies": {},
-  "engines": {
-    "node": "*"
-  }
+    "name": "gryn"
+  , "version": "0.2.0"
+  , "description": "Procfile based process management."
+  , "author": "Jake Luer <jake@alogicalpardox.com> (http://alogicalparadox.com)"
+  , "license": "MIT"
+  , "contributors": []
+  , "keywords": [
+        "procfile"
+    ]
+  , "repository": {
+        "type": "git"
+      , "url": "git@github.com:logicalparadox/gryn.git"
+    }
+  , "engines": {
+      "node": ">= 0.8.0"
+    }
+  , "bin": {
+      "gryn": "./bin/gryn"
+    }
+  , "main": "./index"
+  , "scripts": {
+      "test": "make test"
+    }
+  , "dependencies": {
+        "electron": "0.3.x"
+      , "fsagent": "0.3.x" 
+      , "flynn": "0.2.x"
+    }
+  , "devDependencies": {
+        "chai": "*"
+      , "mocha": "*"
+    }
 }
